[package]
authors = ["George Ornbo <george@shapeshed.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "Your crypto portfolio and terminal together at last"
edition = "2021"
homepage = "https://github.com/shapeshed/wenmoon"
keywords = ["cli", "filesystem", "shell", "tool", "utility"]
license = "Apache-2.0"
name = "wenmoon"
readme = "README.md"
repository = "https://github.com/shapeshed/wenmoon"
rust-version = "1.72.0"
version = "0.2.0"

[dependencies]
async-trait = "0.1"
clap = "3.0"
colored = "2.1.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
separator = "0.3.1"
serde_derive = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tabled = { version = "0.15.0", features = ["ansi"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", default-features = false, features = [
    "fs",
    "user",
] }

[target.'cfg(windows)'.dependencies]
which = "6.0.0"

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true
