[package]
authors = ["George Ornbo <george@shapeshed.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "Your crypto portfolio and terminal together at last"
edition = "2021"
homepage = "https://github.com/shapeshed/wenmoon"
keywords = ["cli", "filesystem", "shell", "tool", "utility"]
license = "Apache-2.0"
name = "wenmoon"
readme = "README.md"
repository = "https://github.com/shapeshed/wenmoon"
rust-version = "1.76.0"
version = "0.3.3"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json"] }
separator = "0.4.1"
serde_derive = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tabled = { version = "0.16.0", features = ["ansi"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", default-features = false, features = [
  "fs",
  "user",
] }

[target.'cfg(windows)'.dependencies]
which = "7.0.2"

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true
