[package]
authors = ["George Ornbo <george@shapeshed.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "Your crypto portfolio and terminal together at last"
edition = "2021"
homepage = "https://github.com/shapeshed/wenmoon"
keywords = ["cli", "filesystem", "shell", "tool", "utility"]
license = "Apache-2.0"
name = "wenmoon"
readme = "README.md"
repository = "https://github.com/shapeshed/wenmoon"
rust-version = "1.88.0"
version = "0.4.0"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5.49", features = ["derive"] }
colored = "3.0.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.13", features = ["json"] }
separator = "0.4.1"
serde_derive = "1.0"
toml = "0.9.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tabled = { version = "0.20.0", features = ["ansi"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.0", default-features = false, features = [
  "fs",
  "user",
] }

[target.'cfg(windows)'.dependencies]
which = "8.0.0"

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true
